# grade12-exam-planner

./: CLAUDE.md  README.md  custom_data.json  exam_planner.py  exam_timetable.json  pyproject.toml  scratch.py
