[project]
name = "grade12-exam-planner"
version = "0.1.0"
description = "A Python script to generate PDF day planners for Grade 12 exam schedules with color-coded subjects and highlighted exam periods"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reportlab>=4.0.0",
    "click>=8.0.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["pdf", "planner", "exam", "schedule", "grade12", "student"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/grade12-exam-planner"
Repository = "https://github.com/yourusername/grade12-exam-planner.git"
Issues = "https://github.com/yourusername/grade12-exam-planner/issues"

[project.scripts]
exam-planner = "exam_planner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]